resources/assets/css/creative.css
/* ... */
.btn-default .badge {
  color: white;
  background-color: #222222;
}
.btn-primary {
  color: white;
  background-color: #8c44d5;
  border-color: #8c44d5;
  -webkit-transition: all 0.35s;
  -moz-transition: all 0.35s;
  transition: all 0.35s;
}
.btn-primary:hover,
.btn-primary:focus,
.btn-primary.focus,
.btn-primary:active,
.btn-primary.active,
.open > .dropdown-toggle.btn-primary {
  color: white;
  background-color: #592191;
  border-color: #592191;
}
.btn-primary:active,
.btn-primary.active,
.open > .dropdown-toggle.btn-primary {
  background-image: none;
}
.btn-primary.disabled,
.btn-primary[disabled],
fieldset[disabled] .btn-primary,
.btn-primary.disabled:hover,
.btn-primary[disabled]:hover,
fieldset[disabled] .btn-primary:hover,
.btn-primary.disabled:focus,
.btn-primary[disabled]:focus,
fieldset[disabled] .btn-primary:focus,
.btn-primary.disabled.focus,
.btn-primary[disabled].focus,
fieldset[disabled] .btn-primary.focus,
.btn-primary.disabled:active,
.btn-primary[disabled]:active,
fieldset[disabled] .btn-primary:active,
.btn-primary.disabled.active,
.btn-primary[disabled].active,
fieldset[disabled] .btn-primary.active {
  background-color: #8c44d5;
  border-color: #8c44d5;
}
.btn-primary .badge {
  color: #8c44d5;
  background-color: white;
}
.btn {
  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
  border: none;
  /*border-radius: 300px;*/
  font-weight: 700;
  text-transform: uppercase;
}
.btn-xl {
  padding: 15px 30px;
}
::-moz-selection {
  color: white;
  text-shadow: none;
  background: #222222;
}
::selection {
  color: white;
  text-shadow: none;
  background: #222222;
}
img::selection {
  color: white;
  background: transparent;
}
img::-moz-selection {
  color: white;
  background: transparent;
}
body {
  webkit-tap-highlight-color: #222222;
}
#tfh, #amtf{
  font-size:45px;
}
.elem{
    color: #fff;
    margin: 10px;
    padding:20px;
    background: #111;
    border-radius:5px;
}
#lost_id{
  font-size:10px;
}
.landing{
  margin:0;
  width:100%;
  height:100%;
  padding:0;
}
.transition-overlay{
  background:#592191;
  text-align:center;
  color:#fff;
  height:100vh;
  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
  font-size:30px;
  font-weight:300;
  /*line-height:95vh;*/
  padding-top:40vh;
  z-index:10000;
  position:relative;
}

.login-square{
  padding:10px;
  padding-top:30px;
  padding-bottom:20px;
  background:#ffffff;
  box-shadow:2px 2px 5px #444;
  color:#000;
}
.login-square hr{
  margin-top:0;
}
@media screen and (max-width: 767px) {
  .login-square{
    margin-top:30px;
  }
}
@media screen and (max-width: 992px) {
  .pay-logo{
    display:none;
  }
}
@media screen and (max-width: 767px) {
  .pay-logo{
    display:inherit;
  }
  .pay-form{
    margin-top:30px;
  }
}
.main-container{
  height:100vh;
  overflow:hidden;
  padding-top:29vh;
}
.pay-form h1,
.pay-form h2,
.pay-form h3,
.pay-form h4,
.pay-form h5,
.pay-form h6,
.pay-form label{
    color:#555;
    margin-top:0;
    margin-bottom:23px;
  
}
.pay-logo{
  width:27px;
  margin:0;
  margin-top:1px;
  float:left;
}
.logo-name{
  float:left;
  margin:0;
  margin-left:3px;
}
.price{
  font-weight:600;
}
.payment-description{
  color:#555;
  border-radius:3px;
  box-shadow:0px 2px 1px #eee;
  padding:20px;
  padding-bottom:0;
  padding-top:0;
}
.boldy{
  font-weight: 600;
}
.hr-1{
  max-width:100%;
  border-color:#ddd;
  border-width:1px;
  margin-bottom:10px;
}
#_2fa_input{
  display:none;
}
.pay-success i{
  font-size:150px;
  color:#8c44d5;
}

